@@ -1,8 +1,16 @@
+Fri Jul 17 21:46:45 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/Service_Participant.h:
+        * dds/DCPS/Service_Participant.cpp:
+
+	  Updated scheduler quantum to make use of ACE_Time_Value::zero rather
+	  than a literal; this was confusing some platforms.
+
 Fri Jul 17 17:26:48 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * java/jms/native/build.xml:
 
-	  Simplified creating Debug/Release builds on Windows platforms.
+          Simplified creating Debug/Release builds on Windows platforms.
 
 Thu Jul 16 21:03:27 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
